# ProyectoEdaII

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sistemagestionlogistico.cpp  sistemagestionlogistico.h
